--- a/style.css
+++ b/style.css
@@ -9,22 +9,37 @@ body {
   width: 400px;
   height: 400px;
   background-color: red;
+  position: relative;
 }
 
 .two {
   width: 300px;
   height: 300px;
   background-color: yellow;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
 }
 
 .three {
   width: 200px;
   height: 200px;
   background-color: green;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
 }
 
 .four {
   width: 100px;
   height: 100px;
   background-color: blue;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
+
+
 }
