--- a/style.css
+++ b/style.css
@@ -9,12 +9,17 @@ body {
   height: 400px;
   background-color: red;
   display: inline-block;
+  position: relative;
 }
 
 .two {
   width: 300px;
   height: 300px;
   background-color: yellow;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+
 
 }
 
@@ -22,9 +27,12 @@ body {
   width: 200px;
   height: 200px;
   background-color: green;
-  position: relative; 
-  left: 400px;
-  top: 200px;
+  position: relative;
+  top: -100px;
+  left: -100px;
+
+
+
 
 }
 
@@ -34,8 +42,8 @@ body {
   background-color: blue;
   position: absolute;
   bottom: 0px;
-  left: 0px;
-  
+  right: 0px;
+
 
 
 
