--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   border: 5px solid black;
   height: 100vh;
+  
 }
 
 .one {
@@ -9,7 +10,7 @@ body {
   height: 400px;
   background-color: red;
   display: inline-block;
-  position: relative;
+  position: static;
 }
 
 .two {
@@ -19,6 +20,7 @@ body {
   position: absolute;
   bottom: 0px;
   right: 0px;
+  
 
 
 }
@@ -27,9 +29,11 @@ body {
   width: 200px;
   height: 200px;
   background-color: green;
-  position: relative;
-  top: -100px;
-  left: -100px;
+  position: absolute;
+  right: 100px;
+  bottom: 300px;
+  
+ 
 
 
 
@@ -40,9 +44,11 @@ body {
   width: 100px;
   height: 100px;
   background-color: blue;
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
+  position: fixed;
+  top:0;
+  left: 0;
+
+
 
 
 
